force-app/main/default/objects/Invoice_Reimbursement_Line__c/Invoice_Reimbursement_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Reimbursement Line</label>
    <nameField>
        <displayFormat>IRL-{0000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Reimbursement Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>