force-app/main/default/objects/Invoice_Reimbursement_Line__c/fields/Amount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Amount_Applied__c</fullName>
    <label>Amount Applied</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>