force-app/main/default/objects/Invoice_Reimbursement_Line__c/fields/HSU_Applied__c.field-meta.xml
<CustomField>
    <fullName>HSU_Applied__c</fullName>
    <formula>Invoice__r.Total_Reimbursement_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSU Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>