force-app/main/default/objects/Invoice_Reimbursement_Line__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Reimbursement Lines</relationshipLabel>
    <relationshipName>Reimbursement_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>