force-app/main/default/objects/Invoice_Reimbursement_Line__c/fields/Retailer_Reimbursement_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Reimbursement_Scheme__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Retailer Reimbursement Scheme</label>
    <referenceTo>Retailer_Reimbursement_Scheme__c</referenceTo>
    <relationshipLabel>Invoice Reimbursement Lines</relationshipLabel>
    <relationshipName>Invoice_Reimbursement_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>